--- a/static/css/header.css
+++ b/static/css/header.css
@@ -20,7 +20,32 @@
 
 .menulabel {
     width: 100%;
+    margin-top: 20px;
     display: flex;
     color: aliceblue;
     justify-content: space-between;
+}
+.label {
+    width: 120px;
+    height: 35px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 155.4%;
+    position: relative;
+}
+.cuadro {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border: 3px solid #FFFFFF;
+    left: 0;
+}
+.myname {
+    text-align: right;
+    width: 100px;
+    position: absolute;
+    right: 0;
+    border-bottom: 3px solid #FFE600;
 }
