--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -1,4 +1,9 @@
-.menulabel a {
+.nav {
+    width: 500px;
+    text-align: center;
+}
+.nav a {
+    min-width: 120px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 600;
@@ -8,9 +13,74 @@
     letter-spacing: 0.02em;
     color: #FFFFFF;
     text-decoration: none;
-    margin-left: 5px;
-    margin-right: 5px;
+    text-align: center;
+
+    margin: 0 10px 0 10px;
 
     transition:all .33s linear;
     -webkit-transition:all .33s linear;
 }
+.line {
+    width:70px; 
+    height:2px;
+    background:#fff;
+    margin: 0 10px 0 10px;
+}
+
+a:nth-child(1) ~ .line{
+    transition:all .33s linear;
+    -webkit-transition:all .33s linear;
+    background-color:#FFE600;
+  }
+
+  a:nth-child(2):hover ~ .line {
+    transform:translate(80px);
+    -webkit-transform:translate(90px);
+    background-color:#e74c3c;
+    transition:all .33s linear;
+    -webkit-transition:all .33s linear;
+  }
+
+  a:nth-child(3):hover ~ .line {
+    transform:translate(80px);
+    -webkit-transform:translate(175px);
+    background-color:#BF55EC;
+    transition:all .33s linear;
+    -webkit-transition:all .33s linear;
+    
+  }
+  
+  a:nth-child(4):hover ~ .line {
+    transform:translate(80px);
+    -webkit-transform:translate(265px);
+    background-color:#f39c12;
+    transition:all .33s linear;
+    -webkit-transition:all .33s linear;
+    width: 110px;
+  }
+
+  a:nth-child(5):hover ~ .line {
+    transform:translate(180px);
+    -webkit-transform:translate(395px);
+    background-color:#20b320;
+
+    transition:all .33s linear;
+    -webkit-transition:all .33s linear;
+    width: 85px;
+  }
+  
+  a:nth-child(2):hover {
+    color:#e74c3c;
+  }
+  
+  a:nth-child(3):hover {
+    color:#BF55EC;
+  }
+  
+  a:nth-child(4):hover {
+    color:#f39c12;
+  }
+
+  a:nth-child(5):hover {
+    color:#20b320;
+  }
