--- a/static/css/servises.css
+++ b/static/css/servises.css
@@ -1,15 +1,196 @@
 .servcontainer {
     width: 100%;
     display: flex;
+    margin-bottom: 50px;
 }
 .servnames {
-    width: 30%;
+    width: 400px;
     display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
 }
-.round {
-    width: 15px;
-    height: 15px;
-    border: 3px solid #FFFFFF;
-    border-radius: 50%;
+.sername {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+    align-items: center;
+}
+.sername p {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 110%;
+    text-align: right;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    cursor: pointer;
+}
 
+.sername div {
+    min-width: 15px;
+    min-height: 15px;
+    border: 3px solid #FFFFFF;
+    border-radius: 20px;
+    margin-left: 20px;
+    cursor: pointer;
+    background-color: none;
+}
+.active div {
+    border: 3px solid #FFE600;
+    background-color: #FFE600;
+}
+.active p {
+    color: #FFE600;
+}
+.sername:hover .pserv {
+    color: #e9e08f;
+}
+.sername:hover .round {
+    border: 3px solid #e9e08f;
+}
+
+.servabout {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.servabout h3 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+    letter-spacing: 0.025em;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+}
+.servabout p {
+    width: 100%;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 170%;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin: 0;
+    padding: 0;
+}
+
+.otherservs {
+    width: 1100px;
+    display: flex;
+    background-color: #515151;
+    flex-direction: column;
+    align-items: center;
+    top: -20px;
+}
+.otherservs h2 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 50px;
+    line-height: 61px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+}
+
+.otherservcontainer {
+    width: 100%;
+    display: flex;
+    margin-bottom: 50px;
+}
+.otherservnames {
+    width: 400px;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.othersername {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+    align-items: center;
+}
+.othersername p {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 110%;
+    text-align: right;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.othersername div {
+    min-width: 15px;
+    min-height: 15px;
+    border: 3px solid #FFFFFF;
+    border-radius: 20px;
+    margin-left: 20px;
+    cursor: pointer;
+    background-color: none;
+}
+.otheractive div {
+    border: 3px solid #FFE600;
+    background-color: #FFE600;
+}
+.otheractive p {
+    color: #FFE600;
+}
+.othersername:hover .otherpserv {
+    color: #e9e08f;
+}
+.othersername:hover .otherround {
+    border: 3px solid #e9e08f;
+}
+
+.otherservabout {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.otherservabout h3 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+    letter-spacing: 0.025em;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+}
+.otherservabout p {
+    width: 100%;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 170%;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin: 0;
+    padding: 0;
 }
