--- a/static/css/content.css
+++ b/static/css/content.css
@@ -93,12 +93,26 @@
     font-weight: bold;
     font-size: 50px;
     line-height: 61px;
-    /* identical to box height */
-
     display: flex;
     align-items: center;
     text-align: center;
     letter-spacing: 0.02em;
 
     color: #FFFFFF;
+}
+
+.tech {
+    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.tech h2 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 50px;
+    line-height: 61px;
+    letter-spacing: 0.02em;
+    color: #282828;
 }
