--- a/static/css/servises.css
+++ b/static/css/servises.css
@@ -85,6 +85,14 @@
     margin: 0;
     padding: 0;
 }
+.sdvig {
+    width: 100%;
+    height: 550px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .otherservs {
     width: 1100px;
@@ -92,6 +100,7 @@
     background-color: #515151;
     flex-direction: column;
     align-items: center;
+    position: absolute;
     top: -20px;
 }
 .otherservs h2 {
@@ -194,3 +203,4 @@
     margin: 0;
     padding: 0;
 }
+
