--- a/static/css/content.css
+++ b/static/css/content.css
@@ -35,7 +35,7 @@
     background: #404040;
     position: relative;
 }
-.cuad p {
+.num {
     font-style: normal;
     font-weight: 600;
     font-size: 30px;
@@ -55,6 +55,7 @@
     left: 50px;
     top: 10px;
     font-size: 50px;
+    color: rgb(196, 235, 58);
 }
 
 .linebottomtask {
