--- a/static/css/servises.css
+++ b/static/css/servises.css
@@ -4,7 +4,7 @@
     margin-bottom: 50px;
 }
 .servnames {
-    width: 400px;
+    min-width: 400px;
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
@@ -52,7 +52,9 @@
 .sername:hover .round {
     border: 3px solid #e9e08f;
 }
-
+.servsabout {
+    width: 100%;
+}
 .servabout {
     width: 100%;
     display: flex;
@@ -60,6 +62,8 @@
     align-items: flex-start;
     justify-content: center;
     margin-left: 20px;
+    display: none;/*изначально скрыт*/
+    opacity: 0;
 }
 
 .servabout h3 {
@@ -82,8 +86,9 @@
     line-height: 170%;
     letter-spacing: 0.02em;
     color: #FFFFFF;
-    margin: 0;
+    margin: auto;
     padding: 0;
+    text-align: center;
 }
 .sdvig {
     width: 100%;
@@ -178,6 +183,7 @@
     align-items: flex-start;
     justify-content: center;
     margin-left: 20px;
+    display: none;/*изначально скрыт*/
 }
 
 .otherservabout h3 {
