--- a/static/css/content.css
+++ b/static/css/content.css
@@ -135,3 +135,16 @@
     flex-direction: column;
     align-items: center;
 }
+
+.techs {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    overflow: hidden;
+}
+.techno img{
+    width: 100px;
+}
