--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,7 @@
 body {
     width: 100%;
     display: flex;
-    background-color: rgb(203, 226, 226);
+    /*background-color: rgb(203, 226, 226);*/
     flex-direction: column;
     align-content: center;
     align-items: center;
