--- a/static/css/content.css
+++ b/static/css/content.css
@@ -1,5 +1,5 @@
 .content {
-    width: 1200px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,18 +16,19 @@
 }
 
 .tasks {
+    width: 70%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     flex-direction: row;
-    height: 500px;
+    align-items: flex-start;
 }
 .task {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 10px 10px 10px 10px;
-    width: 350px;
+    width: 300px;
 }
 .cuad {
     width: 95px;
@@ -96,7 +97,7 @@
     align-items: center;
 }
 .servises, .calc{
-    width: 1200px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -115,7 +116,7 @@
 }
 
 .tech {
-    width: 1200px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -130,7 +131,7 @@
 }
 
 .myworks {
-    width: 1200px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
