--- a/static/css/header.css
+++ b/static/css/header.css
@@ -9,7 +9,7 @@
 }
 
 .headcontent {
-    width: 1200px;
+    width: 100%;
     height: 750px;
     display: flex;
     flex-direction: column;
@@ -25,7 +25,7 @@
     align-items: center;
 }
 .menulabel {
-    width: 1200px;
+    width: 90%;
     display: flex;
     color: aliceblue;
     justify-content: space-between;
@@ -58,6 +58,7 @@
 }
 
 .mainhead {
+    margin-left: 10%;
     margin-top: 130px;
     display: flex;
     flex-direction: column;
@@ -118,4 +119,5 @@
     text-decoration: none;
     text-align: center;
     margin-bottom: 20px;
+    margin-left: 10%;
 }
