--- a/static/css/servises.css
+++ b/static/css/servises.css
@@ -103,6 +103,7 @@
 
 .otherservs {
     width: 90%;
+    max-width: 1000px;
     display: flex;
     background-color: #515151;
     flex-direction: column;
