--- a/static/css/content.css
+++ b/static/css/content.css
@@ -140,12 +140,13 @@
 
 .techs {
     width: 80%;
+    max-width: 1100px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    overflow: hidden;
+
 }
 .techno img{
     width: 150px;
