--- a/static/css/content.css
+++ b/static/css/content.css
@@ -137,6 +137,30 @@
     flex-direction: column;
     align-items: center;
 }
+.worksblock {
+    width: 80%;
+    max-width: 1100px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.workitem {
+    display: flex;
+    max-width: 500px;
+    max-height: 250px;
+    overflow: hidden;
+    text-align: center;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.workimg {
+    width: 100%;
+    top: 0;
+}
 
 .techs {
     width: 80%;
