--- a/static/css/content.css
+++ b/static/css/content.css
@@ -155,7 +155,39 @@
     text-align: center;
     justify-content: center;
     align-items: flex-start;
+    margin: 10px;
+    position: relative;
 }
+
+.overlay {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: #445155ce;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+  }
+  
+  .overlay a {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    color: aliceblue;
+    text-decoration: underline overline #FFE600;
+  }
+  .workitem:hover .overlay {
+    bottom: 0;
+    height: 100%;
+  }
+  
 
 .workimg {
     width: 100%;
