--- a/static/css/servises.css
+++ b/static/css/servises.css
@@ -128,7 +128,7 @@
 .otherservcontainer {
     width: 90%;
     display: flex;
-    margin-bottom: 50px;
+    /*margin-bottom: 50px;*/
     align-items: center;
 }
 .otherservnames {
