--- a/static/css/servises.css
+++ b/static/css/servises.css
@@ -128,7 +128,6 @@
 .otherservcontainer {
     width: 90%;
     display: flex;
-    /*margin-bottom: 50px;*/
     align-items: center;
 }
 .otherservnames {
@@ -190,7 +189,7 @@
     align-items: flex-start;
     justify-content: center;
     margin-left: 20px;
-    display: none;/*изначально скрыт*/
+    display: none;
 }
 
 .otherservabout h3 {
