--- a/static/css/content.css
+++ b/static/css/content.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
 }
-.content h2, .myworks h2 {
+.content h2, .myworks h2, .contact h2 {
     font-style: normal;
     font-weight: bold;
     font-size: 50px;
@@ -206,4 +206,50 @@
 .techno img{
     width: 150px;
     padding: 20px;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contactbox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.contactblock {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.contactblock a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    padding: 5px;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 155.4%;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #6A6969;
+}
+
+.contactblock img {
+    width: 70px;
+    height: 70px;
+    padding: 0 10px 0 0;
+}
+
+.contactblock a:hover img, .contactblock a:hover {
+    filter: brightness(10%);
+    font-weight: bold;
 }
