--- a/static/css/content.css
+++ b/static/css/content.css
@@ -95,6 +95,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
 }
 .servises, .calc{
     width: 100%;
@@ -103,7 +104,7 @@
     align-items: center;
 }
 .servises h2, .calc h2 {
-    margin-top: 20px;
+    margin-top: 40px;
     font-style: normal;
     font-weight: bold;
     font-size: 50px;
@@ -212,18 +213,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .contactbox {
     display: flex;
     flex-direction: row;
     align-items: center;
+    max-width: 1100px;
+    width: 100%;
 }
 .contactblock {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    width: 400px;
 }
 
 .contactblock a {
