--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,3 +1,46 @@
-.order {
+.form-container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: #282828;
+    border-radius: 5px;
+}
+
+.form-container h3 {
+    color: #FFFFFF;
+    font-size: 24px;
+    margin: 15px 0 15px 0;
+}
+.form-container input, .form-container textarea {
+    margin: 5px;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.form-container input {
+    height: 50px;
+    width: 90%;
+    
+}
+
+.form-container textarea {
+    height: 100px;
+    width: 90%;
+    resize: none;
+
+}
+.form-container button {
+    width: 200px;
+    height: 50px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 155.4%;
+    letter-spacing: 0.02em;
+    color: #111111;
+    background: #FFE600;
+    text-decoration: none;
+    text-align: center;
+    margin: 5px;
 }
