--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,10 @@
     padding: 0;
     font-family: Montserrat;
 }
+html {
+    scroll-behavior: smooth;
+    }
+    
 body {
     width: 100%;
     display: flex;
