--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -65,6 +65,10 @@ a:nth-child(1) ~ .line{
     width: 85px;
   }
   
+  a:nth-child(1):hover {
+    color:#FFE600;
+  }
+
   a:nth-child(2):hover {
     color:#e74c3c;
   }
