--- a/static/css/content.css
+++ b/static/css/content.css
@@ -258,3 +258,69 @@
     filter: brightness(10%);
     font-weight: bold;
 }
+
+.partners {
+    display: flex;
+    flex-direction: column;
+}
+
+.partneritem {
+    display: flex;
+    border-bottom: #FFE600 solid;
+    align-items: center;
+    margin-bottom: 20px;
+    justify-content: space-between;
+}
+
+.partnername {
+    display: flex;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+}
+.partnername p {
+    transform: rotate(-35deg);
+    color: #FFFFFF;
+    font-size: 26px;
+}
+
+.partnerinfo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.partnercontact, .partnercontact a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 110%;
+    text-align: right;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.partnercontact img {
+    width: 40px;
+    height: 40px;
+    margin: 0 10px 0 10px;
+    filter: brightness(1.5);
+}
+.partnercontact a:hover img {
+    filter: brightness(3);
+}
+.partnercontact h4 {
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+.partnerabout {
+    font-size: 16px;
+
+    color: #FFFFFF;
+}
