--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #131212;
 
 }
 
@@ -12,6 +13,11 @@
     flex-direction: row;
     align-items: flex-start;
     
+}
+.footer-container a {
+    text-decoration: none;
+    color: aliceblue;
+    margin: 10px 20px 10px 20px;
 }
 
 .footermenu {
@@ -39,4 +45,5 @@
     align-content: center;
     align-items: center;
     margin-bottom: 5px;
+    text-decoration: none;
 }
