--- a/static/css/header.css
+++ b/static/css/header.css
@@ -80,7 +80,7 @@
     line-height: 82px;
     letter-spacing: 0.02em;
     color: #FFFFFF;
-    width: 775px;
+    max-width: 775px;
 }
 
 .mainhead p {
