--- a/static/css/content.css
+++ b/static/css/content.css
@@ -8,7 +8,6 @@
 .content h2, .myworks h2, .contact h2 {
     font-style: normal;
     font-weight: bold;
-    font-size: 50px;
     line-height: 155.4%;
     letter-spacing: 0.02em;
     color: #282828;
@@ -16,7 +15,7 @@
 }
 
 .tasks {
-    width: 70%;
+    width: 90%;
     max-width: 1000px;
     display: flex;
     justify-content: center;
@@ -94,7 +93,7 @@
     background: #282828;
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     margin-top: 20px;
 }
@@ -105,10 +104,8 @@
     align-items: center;
 }
 .servises h2, .calc h2 {
-    margin-top: 40px;
     font-style: normal;
     font-weight: bold;
-    font-size: 50px;
     line-height: 61px;
     display: flex;
     align-items: center;
@@ -126,7 +123,6 @@
 .tech h2 {
     font-style: normal;
     font-weight: bold;
-    font-size: 50px;
     line-height: 61px;
     letter-spacing: 0.02em;
     color: #282828;
