--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,11 +17,9 @@ body {
 h2 {
     margin-top: 40px;
     font-size: 50px;
+    line-height: 60px;
 }
 
 @media only screen and (max-width: 769px){
-    h2 {
-        margin-top: 30px;
-        font-size: 40px;
-    }
+
   }
