--- a/static/css/mobil.css
+++ b/static/css/mobil.css
@@ -68,9 +68,8 @@
     .round {
         display: none;
     }
-    .leftround {
-        display: block;
-        margin-right: 5px;
+    .otherround {
+        display: none;
     }
 
     .servabout {
@@ -83,11 +82,47 @@
     }
     .servabout p {
         width: 95%;
-        font-family: Montserrat;
-        font-size: 16px;
+        font-size: 14px;
         line-height: 110%;
     }
-    .content, .servmain, .sdvig, .tech, .myworks, .calcmain, .contact, .footer {
+    .servabout h3 {
+        font-size: 15px;
+        line-height: 10px;
+        margin-bottom: 5px;
+    }
+    .otherservs {
+        width: 100%;
+    }
+    .otherservcontainer {
+        width: 100%;
+        flex-direction: column;
+    }
+    .othersername {
+        justify-content: flex-start;
+        margin-bottom: 10px
+    }
+    .othersername p {
+        text-align: left;
+    }
+    .otherservabout {
+        margin-left: 0;
+    }
+
+    .leftround {
+        display: block;
+        margin-right: 5px;
+    }
+    .otherservabout p {
+        width: 95%;
+        font-size: 14px;
+        line-height: 120%;
+        letter-spacing: 0.02em;
+        color: #FFFFFF;
+        margin: 0;
+        padding: 0 5px 0 5px;
+        margin-bottom: 10px;
+    }
+    .tech, .myworks, .calcmain, .contact, .footer {
         display: none;
     }
   }
