--- a/static/css/flipbox.css
+++ b/static/css/flipbox.css
@@ -18,18 +18,18 @@
     transform-style: preserve-3d;
   }
   
+  @media only screen and (min-width: 700px){
   /* Сделайте горизонтальный флип, когда вы перемещаете мышь над контейнером флип-бокса */
   .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
   }
-  
+}
   /* Расположите переднюю и заднюю стороны */
   .flip-card-front, .flip-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-
     display: flex;
     align-items: center;
     justify-content: center;
